--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ h1 {
 
 #small-logo {
     width: 50px;
-    transform: translateX(-5px);
 }
 
 .page-header input,
@@ -91,6 +90,10 @@ h1 {
     color: #fff;
 }
 
+.left-sidebar ul .fas {
+    transform: translateX(25%);
+}
+
 /*# main */
 
 /*| MAIN HEADER */
@@ -112,18 +115,34 @@ h1 {
     font-size: 2rem;
 }
 
+/*! OFFCANVAS */
+
+.top-mhead .offcanvas {
+    width: 100%;
+}
+
 /*| MAIN CONTENT */
 
 /*! TABLE */
+
+thead {
+    font-size: 0.7rem;
+}
 
 th {
     font-weight: normal;
 }
 
+.table thead th:first-child {
+    width: 50%;
+}
+
 .class-avatar {
-    height: 25px;
-    border-radius: 50%;
     display: inline-block;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    margin-right: 5px;
 }
 
 tbody .btn.btn-outline-secondary {
@@ -136,5 +155,19 @@ tbody .btn.btn-outline-secondary {
 @media screen and (min-width: 992px) {
     .left-sidebar {
         width: 150px;
+    }
+
+    .table thead th:first-child {
+        width: 45%;
+    }
+
+    .top-mhead .offcanvas {
+        width: 60%;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .table thead th:first-child {
+        width: 60%;
     }
 }
